@@ -275,6 +275,7 @@ Included
 - Ticket-pack summary now also includes compare semantics fields (`compareVerdict`, `compareBuckets`, `compareBucketCount`, `compareChangeCount`) with deterministic `compare_report.txt` fallback when `compare_receipt.json` is unavailable.
 - Ticket-pack output now uses staged finalize (`ticket_pack.stage` -> `ticket_pack`) to prevent partial-pack residue from being treated as completed support bundles.
 - Compare output now uses staged finalize (`<out>.stage` -> `<out>`) so partial compare writes are not treated as completed compare evidence.
+- Compare CLI smoke coverage now pins staged-finalize replacement behavior (stale pre-existing output roots are replaced and `.stage` residue is absent after successful finalize).
 - Ticket-pack contract coverage now enforces report-state extraction from `report_card_v0.json` and validates digest identity line format (`sha256:<64hex>`) in `ticket_summary.txt`.
 - Ticket-pack contract coverage now also enforces text fallback parsing from `report_card.txt` (`STATUS/BASELINE/LATEST/BUCKETS` plus key-value lines) when structured report JSON is absent.
 - Windows shell `report_card.txt` and `report_card_v0.json` now include adapter metadata and capability counts when adapter evidence exists:
